NetBSD Problem Report #41282

From www@NetBSD.org  Sat Apr 25 13:07:44 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 7CFDD63C20F
	for <gnats-bugs@gnats.netbsd.org>; Sat, 25 Apr 2009 13:07:44 +0000 (UTC)
Message-Id: <20090425130744.4D3A363C166@www.NetBSD.org>
Date: Sat, 25 Apr 2009 13:07:44 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing WARNS in eeprom/Makefile
X-Send-Pr-Version: www-1.0

>Number:         41282
>Category:       bin
>Synopsis:       Missing WARNS in eeprom/Makefile
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lukem
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Apr 25 13:10:00 +0000 2009
>Closed-Date:    Sun Apr 26 01:51:52 +0000 2009
>Last-Modified:  Sun Apr 26 01:55:01 +0000 2009
>Originator:     Henning Petersen
>Release:        current-NetBSD
>Organization:
>Environment:
>Description:
Cross-building for a sparc64, I am missing a WARNS in Makefile.
>How-To-Repeat:

>Fix:
--- usr.sbin/eeprom/Makefile	14 Feb 2009 13:56:41 -0000	1.15
+++ usr.sbin/eeprom/Makefile	25 Apr 2009 11:07:46 -0000
@@ -4,6 +4,7 @@
 .if ${MACHINE} == "sun3" || ${MACHINE} == "sun3x" \
 	|| ${MACHINE_ARCH} == "sparc" || ${MACHINE_ARCH} == "sparc64" \
 	|| ${MACHINE} == "macppc" || ${MACHINE} == "prep"
+WARNS?=	2
 PROG=	eeprom

 SRCS=	main.c

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: bin-bug-people->lukem
Responsible-Changed-By: lukem@NetBSD.org
Responsible-Changed-When: Sun, 26 Apr 2009 01:51:52 +0000
Responsible-Changed-Why:
I took it


State-Changed-From-To: open->closed
State-Changed-By: lukem@NetBSD.org
State-Changed-When: Sun, 26 Apr 2009 01:51:52 +0000
State-Changed-Why:
This should be fixed now; I fixed the warnings in the code
(as seen by cross-compiling for sparc64)


From: Luke Mewburn <lukem@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41282 CVS commit: src/usr.sbin/eeprom
Date: Sun, 26 Apr 2009 01:51:07 +0000

 Module Name:	src
 Committed By:	lukem
 Date:		Sun Apr 26 01:51:07 UTC 2009

 Modified Files:
 	src/usr.sbin/eeprom: defs.h main.c

 Log Message:
 Fix WARNS=4 issues (-Wextra -Wcast-qual).
 Resolves PR bin/41282


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/usr.sbin/eeprom/defs.h
 cvs rdiff -u -r1.19 -r1.20 src/usr.sbin/eeprom/main.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.