Fix WARNS=4 issues (-Wextra -Wcast-qual). Resolves PR bin/41282